--- a/slides/lecture 04/slide01.html
+++ b/slides/lecture 04/slide01.html
@@ -18,8 +18,7 @@
             </div>
             <div class="cover-section cover-section-blue">
                 <h1 class="slide-title">
-                    Advanced Concepts in<br>
-                    Gen AI Programming
+                    Gen AI in Software Development
                 </h1>
             </div>
             
@@ -27,7 +26,7 @@
             
             <div class="cover-section cover-section-blue">
                 <h2 class="slide-subtitle">
-                    Code Execution • Function Calling • Caching
+                    Lecture 04: Advanced Concepts in Gen AI Programming
                 </h2>
                 <div class="slide-author">
                     Doan Trung Tung, PhD, Greenwich Vietnam
