--- a/slides/lecture 05/slide32.html
+++ b/slides/lecture 05/slide32.html
@@ -11,28 +11,27 @@
     <div class="slide-header"></div>
     <div class="slide-content">
       <h1 class="slide-title">Conclusion and Next Steps</h1>
-      <ul class="content-list wide compact template6-list">
-        <li class="slide-in-center">
-          <div class="main-content">
-            <strong>What We've Accomplished</strong>
-          </div>
-          <ul class="sub-list">
-            <li class="slide-in-center" style="animation-delay: 0.1s;">Built a fully functional RAG chatbot from scratch.</li>
-            <li class="slide-in-center" style="animation-delay: 0.15s;">Implemented a complete pipeline: document processing, embedding, indexing, retrieval, and generation.</li>
-            <li class="slide-in-center" style="animation-delay: 0.2s;">Created an interactive and user-friendly web interface.</li>
+      <div class="two-panel">
+        <div class="panel panel-text slide-in-left">
+          <ul class="content-list template2-list">
+            <li class="slide-in-center">
+              <strong>What We've Accomplished</strong><br>
+              Built a fully functional RAG chatbot from scratch with complete pipeline: document processing, embedding, indexing, retrieval, and generation.
+            </li>
+            <li class="slide-in-center" style="animation-delay: 0.2s;">
+              <strong>Interactive Web Interface</strong><br>
+              Created a user-friendly Streamlit application that allows users to upload documents and chat with their content in real-time.
+            </li>
+            <li class="slide-in-center" style="animation-delay: 0.4s;">
+              <strong>Future Improvements</strong><br>
+              Hybrid search, scalability with dedicated vector databases, and enhanced UI with source transparency.
+            </li>
           </ul>
-        </li>
-        <li class="slide-in-center" style="animation-delay: 0.3s;">
-          <div class="main-content">
-            <strong>How to Improve</strong>
-          </div>
-          <ul class="sub-list">
-            <li class="slide-in-center" style="animation-delay: 0.35s;"><strong>Hybrid Search:</strong> Combine vector search with traditional keyword search for better accuracy.</li>
-            <li class="slide-in-center" style="animation-delay: 0.4s;"><strong>Scalability:</strong> For larger applications, migrate from FAISS to a dedicated vector database like PostgreSQL with <code>pgvector</code>.</li>
-            <li class="slide-in-center" style="animation-delay: 0.45s;"><strong>Enhanced UI:</strong> Add a feature to display the source chunks for each answer to increase transparency.</li>
-          </ul>
-        </li>
-      </ul>
+        </div>
+        <div class="panel slide-in-right">
+          <img src="images/rag_streamlitui.png" alt="RAG Streamlit UI" class="panel-image">
+        </div>
+      </div>
     </div>
     <div class="slide-footer">
       <div class="footer-nav"><button class="nav-btn" onclick="previousSlide()">◀ Prev</button></div>
